fix font on ios

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'EB Garamond';
   src: url('/fonts/EBGaramond-VariableFont_wght.ttf') format('truetype');
+	font-weight: 1 999;
 }
 
 *,
